Fix for overflowing

--- a/src/scss/pages/_offerManagement.scss
+++ b/src/scss/pages/_offerManagement.scss
@@ -12,7 +12,13 @@
     flex-direction: column;
     gap: 10px;
     align-items: center;
-    color: v.$white
+    color: v.$white;
+
+    .offer-management-buttons {
+      @media (max-width: 500px) {
+        flex-direction: column;
+      }
+    }
   }
 }
 
@@ -63,4 +69,12 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+}
+
+.offer-card {
+  width: 400px !important;
+
+  @media (max-width: 500px) {
+    width: 320px !important;;
+  }
 }
